--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@ body {
 form {
     margin-left: auto;
     margin-right: auto;
-    height: 300px;
+    height: 370px;
     width: 300px;
     background: darkgreen;
 }
@@ -31,6 +31,10 @@ input[type="text"] {
     width: 250px;
     height: 35px;
     font-size: 25px;
+}
+
+input[type="reset"] {
+    width: 185px;
 }
 
 /*
